Add showcase and instructions